chore: drop SystemProperties usage in monitor
Refs: XRDDEV-2715